changed VideoCell UI, Log In and Log Out page

--- a/MyReelty/MVC/Views/PinInfoCollectionCell.xib
+++ b/MyReelty/MVC/Views/PinInfoCollectionCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,35 +13,32 @@
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="340" height="85"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wS0-aa-pGh" userLabel="Review Image">
-                        <rect key="frame" x="0.0" y="0.0" width="120" height="85"/>
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wS0-aa-pGh" userLabel="Review Image">
                         <constraints>
                             <constraint firstAttribute="width" secondItem="wS0-aa-pGh" secondAttribute="height" multiplier="120:85" id="qOe-ex-bjx"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NW Gig Harbor,Washington" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EpP-LY-8nN" userLabel="Adrress lable">
-                        <rect key="frame" x="128" y="28" width="204" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="EpP-LY-8nN" secondAttribute="height" multiplier="17:2" constant="51" id="fp2-K2-2yO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ik3-JO-FEC" userLabel="Zip lable">
-                        <rect key="frame" x="128" y="46" width="204" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="ik3-JO-FEC" secondAttribute="height" multiplier="101:10" constant="22.200000000000017" id="0Cw-zH-1sz"/>
                         </constraints>
                         <string key="text">7804 Goodman Drive
 </string>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 22333" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="V9D-ZA-ghB" userLabel="Price Lable">
-                        <rect key="frame" x="128" y="70" width="203" height="16"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="V9D-ZA-ghB" secondAttribute="height" multiplier="203:16" id="bBb-ON-iqn"/>
                         </constraints>
@@ -49,31 +46,27 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 of 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQh-q5-VV4">
-                        <rect key="frame" x="120" y="2" width="220" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="TBM-sj-1To"/>
                             <constraint firstAttribute="width" secondItem="fQh-q5-VV4" secondAttribute="height" multiplier="220:21" id="vTQ-5f-pfW"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pinArrowRight" translatesAutoresizingMaskIntoConstraints="NO" id="uXO-QL-gUV">
-                        <rect key="frame" x="285" y="2" width="25" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Ks1-hs-nwV"/>
                             <constraint firstAttribute="width" constant="25" id="cWN-yU-q78"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pinArrowLeft" translatesAutoresizingMaskIntoConstraints="NO" id="96f-gx-Bcf">
-                        <rect key="frame" x="150" y="2" width="25" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="RTy-7i-dNJ"/>
                             <constraint firstAttribute="width" constant="25" id="mR3-yn-341"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="EpP-LY-8nN" secondAttribute="trailing" constant="8" id="0iu-CH-W5d"/>
