--- a/MyReelty/MVC/Views/PremiumVideoCell.xib
+++ b/MyReelty/MVC/Views/PremiumVideoCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,29 +12,25 @@
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="360" height="204"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rdb-dh-NBY">
-                        <rect key="frame" x="0.0" y="0.0" width="360" height="204"/>
-                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rdb-dh-NBY"/>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Your Search in Video" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iF7-2U-6l7">
-                        <rect key="frame" x="85" y="18" width="190" height="63"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="63" id="NlG-9m-Tr6"/>
                             <constraint firstAttribute="width" constant="190" id="eYl-jl-fnZ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_logo_small.png" translatesAutoresizingMaskIntoConstraints="NO" id="V6p-Vf-qVq">
-                        <rect key="frame" x="8" y="8" width="75" height="28"/>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_logo_small.png" translatesAutoresizingMaskIntoConstraints="NO" id="V6p-Vf-qVq">
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="9uc-ff-Jpr"/>
                             <constraint firstAttribute="height" constant="28" id="VVS-mH-9QD"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onX-Ff-Pdg">
-                        <rect key="frame" x="150" y="72" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="OD9-Kz-ajt"/>
                             <constraint firstAttribute="height" constant="60" id="fB7-cu-EdG"/>
@@ -45,7 +41,6 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZtB-7l-Xvf">
-                        <rect key="frame" x="19" y="139" width="323" height="41"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="41" id="AHJ-ym-PhU"/>
                             <constraint firstAttribute="width" constant="323" id="aAr-n6-0Su"/>
@@ -53,13 +48,12 @@
                         <string key="text">Find your next home on the world's
 largest real estate video library</string>
                         <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="onX-Ff-Pdg" firstAttribute="centerX" secondItem="Rdb-dh-NBY" secondAttribute="centerX" id="0pS-PR-1Yj"/>
                 <constraint firstItem="onX-Ff-Pdg" firstAttribute="centerY" secondItem="Rdb-dh-NBY" secondAttribute="centerY" id="GMK-Nw-GLa"/>
